--- a/project/at_start_f437/applications/lvgl_demo/mdk_v5/at32f437_lvgl_demo.uvprojx
+++ b/project/at_start_f437/applications/lvgl_demo/mdk_v5/at32f437_lvgl_demo.uvprojx
@@ -1538,6 +1538,11 @@
               <FileType>5</FileType>
               <FilePath>..\readme.txt</FilePath>
             </File>
+            <File>
+              <FileName>README.md</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\..\..\..\README.md</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
